# first

./: .gitignore  CMakeLists.txt  CMakeSettings.json  first.cpp
helper/: CMakeLists.txt
helper/errors/: CmakeLists.txt  gl_errors.cpp
helper/errors/include/: gl_errors.h
helper/glew/: CMakeLists.txt  glew.cpp
helper/glew/include/: glew.h
helper/glfw/: CMakeLists.txt  glfw.cpp
helper/glfw/include/: glfw.h
helper/render/: CMakeLists.txt  render_loop.cpp
helper/render/include/: render_loop.h
helper/shaders/: CMakeLists.txt  shader.cpp  shader_program.cpp
helper/shaders/include/: shader.h  shader_program.h
shaders/: CMakeLists.txt  fragment
